# CodeReviewerAI

./: .env.example  .gitignore  CodeReviewer.md  Dockerfile  Dockerfile.dev  Makefile  ProjectBible.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
explanations/: FOLDER_STRUCTURE.md
scripts/: dev-entrypoint.sh
